--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update": "npm install -g n",
+    "postinstall": "npm run build",
     "start": "node main.js"
   },
-  "engines": {
-    "node": "16.7.0" 
-},
   "author": "",
   "license": "ISC",
   "dependencies": {
