--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "postinstall": "npm run build",
     "start": "node main.js"
   },
+  "engines": {
+    "node": "16.7.0" 
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
